setupK8s/simple-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-service

spec:
    replicas: 2
    selector:
      matchLabels:
        app: services
    template:
      metadata:
        labels:
          app: services
      spec:
        containers:
        - name: pingpong-apps
          image: afsanarozan/exam:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: test-service
    labels:
      app: services
spec:
    selector:
      app: services
    ports:
      - port: 80
        targetPort: 3000
        protocol: TCP
        name: serviceport
---
