setupK8s/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: test-service
    labels:
      name: ingress-nginx
spec:
  rules:
    - host: k8s.example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: test-service
              servicePort: 80
