setupK8s/simple.yml
---
apiVersion: v1
kind: Namespace
metadata:
    name: example

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-service
    namespace: example
spec:
    replicas: 2
    selector:
      matchLabels:
        app: services
    template:
      metadata:
        labels:
          app: services
      spec:
        containers:
        - name: pingpong-apps
          image: afsanarozan/exam:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: test-service
    namespace: example
    labels:
      app: services
spec:
    selector:
      app: services
    type: NodePort
    ports:
      - port: 8081
        targetPort: 3000
        protocol: TCP
        name: serviceport

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-nginx
    labels:
      name: ingress-nginx
    namespace: example
spec:
  rules:
    - host: k8s.example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: test-service
              servicePort: 80
